SignatureCountSlider: different hand distribution, prevent horizontal scrolling

--- a/src/components/Forms/SignatureCountSlider/style.module.less
+++ b/src/components/Forms/SignatureCountSlider/style.module.less
@@ -17,12 +17,13 @@
 }
 
 .stage {
-    height: 80vh;
+    height: 100%;
     width: 100%;
     position: absolute;
     bottom: 0;
     left: 0;
     pointer-events: none;
+    overflow: hidden;
 }
 
 .hand {
@@ -38,10 +39,10 @@
 
     &_left {
         transform: rotate(90deg);
-        left: -4rem;
+        left: -2rem;
     }
     &_right {
-        right: -4rem;
+        right: -2rem;
         transform: rotate(-90deg);
     }
 }
